--- a/Drivers.BLL/Drivers.BLL.csproj
+++ b/Drivers.BLL/Drivers.BLL.csproj
@@ -7,15 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Drivers.DAL\Drivers.DAL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="DTOs\Requests\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Drivers.DAL\Drivers.DAL_ADO.csproj" />
+    <ProjectReference Include="..\Drivers.DAL_EF\Drivers.DAL_EF.csproj" />
   </ItemGroup>
 
 </Project>
