--- a/FakeDataDbGenerator/appsettings.json
+++ b/FakeDataDbGenerator/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-TOMKA;Initial Catalog=DriversManagement;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=DESKTOP-TOMKA;Database=DriversManagement;Integrated Security=true;"
   }
 }
